--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Blog</h1>
     <hr/>
-{%for p in posts%}
+{%for p in post_list%}
     <h3><a href="{{p.get_absolute_url}}">{{p.title}}</a></h3>
     <P>{{p.created_at}}</P>
     <p>{{p.content}}</p>
